--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -7,40 +7,25 @@
     <meta name="keywords" content="你好，他好，我好">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="icon" href="../static/image/animals/rooster-svgrepo-com.svg">
+    <link rel="icon" href="/static/image/animals/rooster-svgrepo-com.svg">
     <title>Acwing-Web应用课</title>
 
-    <!--    <link rel="stylesheet" href="../static/css/style.css">-->
-    <style>
-        a:nth-child(2) {
-            color: #FFFFFF;
-        }
-    </style>
+    <link rel="stylesheet" href="/static/css/style.css">
 
 </head>
 
 <body style="background: #2b2d30">
 
-<p style="color: #acacac">
-    <i>举报了哥</i>，你什么都没做错，全怪我那令人作呕的嫉妒和卑微的自尊心，看见你的文字我完全
-    破防了，我直接丢盔弃甲了，看见你这图的那一秒，我满头大汗，浑身发冷，亿郁症瞬间发作了，
-    生活仿佛没了颜色，像是被抓住尾巴的赛亚人，带着海楼石的能力者，抽离尾兽的人柱力，像是没
-    了光的奥特曼，彻底断绝了生的希望。
-</p>
-<a href="https://www.ccnu.edu.cn" target="_blank">
-    <img width=50% src="../static/image/animals/duck-svgrepo-com.svg" alt="">
-</a>
+<h4>《赋得古原草送别》</h4>
 
-<br>
-
-<div>
-    <a href="http://www.ccnu.edu.cn">p2</a>
-    <a href="http://www.ccnu.edu.cn">p3</a>
-    <a href="http://www.ccnu.edu.cn">p4</a>
+<div class="mydiv">
+<!--    <p>离离原上草，一岁一枯荣。</p>-->
+<!--    <p>野火烧不尽，春风吹又生。</p>-->
+<!--    <p>远芳侵古道，晴翠接荒城。</p>-->
+<!--    <p>又送王孙去，萋萋满别情。</p>-->
 </div>
 
-<br>
+
 
 </body>
-
 </html>
