完成了css第3、4题，css学完1.7边框

--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -16,15 +16,26 @@
 
 <body style="background: #2b2d30">
 
-<h4>《赋得古原草送别》</h4>
-
-<div class="mydiv">
-<!--    <p>离离原上草，一岁一枯荣。</p>-->
-<!--    <p>野火烧不尽，春风吹又生。</p>-->
-<!--    <p>远芳侵古道，晴翠接荒城。</p>-->
-<!--    <p>又送王孙去，萋萋满别情。</p>-->
-</div>
-
+<table>
+    <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+    </tr>
+    <tr>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+    </tr>
+    <tr>
+        <td>9</td>
+        <td>10</td>
+        <td>11</td>
+        <td>12</td>
+    </tr>
+</table>
 
 
 </body>
