--- a/my_website/static/css/style.css
+++ b/my_website/static/css/style.css
@@ -1,23 +1,30 @@
-.mydiv {
+table {
+    color: #cccccc;
+    border-style: solid;
+    border-collapse: collapse;
+}
+
+td {
+    border-style: solid;
+    border-width: 2px;
     width: 200px;
-    height: 200px;
-    background-image: linear-gradient(orange, orchid);
+    height: 50px;
 }
 
 .spinner {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 20px solid #ccc;
-  border-top-color: #333;
-  animation: spin 1s ease-in-out infinite;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 20px solid #ccc;
+    border-top-color: #333;
+    animation: spin 1s ease-in-out infinite;
 }
 
 @keyframes spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
