--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -16,27 +16,13 @@
 
 <body style="background: #2b2d30">
 
-<table>
-    <tr>
-        <td>1</td>
-        <td>2</td>
-        <td>3</td>
-        <td>4</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td>10</td>
-        <td>11</td>
-        <td>12</td>
-    </tr>
-</table>
+<div>
+    应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课
+</div>
 
+<div>
+    应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课
+</div>
 
 </body>
 </html>
