--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -16,12 +16,10 @@
 
 <body style="background: #2b2d30">
 
-<div>
-    应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课
-</div>
+<div class="div-outer">
+    <div class="div-inner">
 
-<div>
-    应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课应用课
+    </div>
 </div>
 
 </body>
