--- a/my_website/static/css/style.css
+++ b/my_website/static/css/style.css
@@ -1,12 +1,24 @@
-.div-outer {
-    width: 300px;
-    height: 300px;
-    background-color: lightblue;
-    padding: 20px;
+.div-flex {
+    width: 100%;
+    height: 500px;
+    background-color: lightgray;
+    display: flex;
+    /*flex-direction: column;*/
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.div-inner {
+.div-flex-item {
     width: 100px;
     height: 100px;
-    background-color: darkred;
+    flex: none;
+}
+
+.div-flex-item:nth-child(odd) {
+    background-color: lightpink;
+}
+
+.div-flex-item:nth-child(even) {
+    background-color: lightgreen;
 }
