--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -15,12 +15,17 @@
 </head>
 
 <body style="background: #2b2d30">
-
-<div class="div-outer">
-    <div class="div-inner">
-
-    </div>
+<div class="div-flex">
+    <div class="div-flex-item">1</div>
+    <div class="div-flex-item">2</div>
+    <div class="div-flex-item">3</div>
+    <div class="div-flex-item">4</div>
+    <div class="div-flex-item">5</div>
+    <div class="div-flex-item">6</div>
+    <div class="div-flex-item">7</div>
+    <div class="div-flex-item">8</div>
+    <div class="div-flex-item">9</div>
+    <div class="div-flex-item">10</div>
 </div>
-
 </body>
 </html>
