--- a/my_website/static/css/style.css
+++ b/my_website/static/css/style.css
@@ -1,24 +1,29 @@
-.div-flex {
-    width: 100%;
-    height: 500px;
+.container {
     background-color: lightgray;
+    width: 80%;
+    height: 100vh;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.row {
     display: flex;
-    /*flex-direction: column;*/
-    flex-wrap: wrap;
-    justify-content: space-around;
+    /*flex-wrap: wrap;*/
+}
+
+.col {
+    display: flex;
+    flex-basis: calc(100% / 3);
+    height: 50px;
+    justify-content: center;
     align-items: center;
+
+    background-color: lightsalmon;
+    border: 1px solid gray;
+    box-sizing: border-box;
+    font-size: 30px;
 }
 
-.div-flex-item {
-    width: 100px;
-    height: 100px;
-    flex: none;
-}
+.col-sm-1 {
 
-.div-flex-item:nth-child(odd) {
-    background-color: lightpink;
-}
-
-.div-flex-item:nth-child(even) {
-    background-color: lightgreen;
 }
