--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -18,8 +18,8 @@
 <div class="container">
     <div class="row">
         <div class="col col1">1</div>
-        <div class="col">2</div>
-        <div class="col">3</div>
+        <div class="col col2">2</div>
+        <div class="col col3">3</div>
     </div>
 </div>
 </body>
