--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -17,9 +17,10 @@
 <body style="background: #2b2d30">
 <div class="container">
     <div class="row">
-        <div class="col col1">1</div>
-        <div class="col col2">2</div>
-        <div class="col col3">3</div>
+        <div class="col col-md-2">1</div>
+        <div class="col col-md-4">2</div>
+        <div class="col col-md-6">3</div>
+        <div class="col col-md-6">3</div>
     </div>
 </div>
 </body>
