--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -11,16 +11,17 @@
     <title>Acwing-Web应用课</title>
 
     <link rel="stylesheet" href="/static/css/style.css">
+<!--    <link rel="stylesheet" href="/static/third_party/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">-->
+<!--    <script src="/static/third_party/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>-->
 
 </head>
 
 <body style="background: #2b2d30">
 <div class="container">
     <div class="row">
-        <div class="col col-md-2">1</div>
-        <div class="col col-md-4">2</div>
-        <div class="col col-md-6">3</div>
-        <div class="col col-md-6">3</div>
+        <div class="col col-md-6 col-sm-12">账号</div>
+        <div class="col col-md-6 col-sm-12">密码</div>
+        <div class="col col-md-12 col-sm-12">个人简介</div>
     </div>
 </div>
 </body>
