--- a/my_website/static/css/style.css
+++ b/my_website/static/css/style.css
@@ -13,6 +13,7 @@
     （即 stretch）将应用于该行或列。
     */
     align-items: flex-start;
+    justify-content: center;
 }
 
 .row {
@@ -33,104 +34,8 @@
     font-size: 30px;
 }
 
-@media (min-width: 768px) {
-    /* -几代表几份 */
-    .col-md-1 {
-        flex-basis: calc(100% / 12);
+ @media (max-width: 767px) {
+        .col-xs-12 button {
+            width: 100%;
+        }
     }
-
-    .col-md-2 {
-        flex-basis: calc(100% * 2 / 12);
-    }
-
-    .col-md-3 {
-        flex-basis: calc(100% * 3 / 12);
-    }
-
-    .col-md-4 {
-        flex-basis: calc(100% * 4 / 12);
-    }
-
-    .col-md-5 {
-        flex-basis: calc(100% * 5 / 12);
-    }
-
-    .col-md-6 {
-        flex-basis: calc(100% * 6 / 12);
-    }
-
-    .col-md-7 {
-        flex-basis: calc(100% * 7 / 12);
-    }
-
-    .col-md-8 {
-        flex-basis: calc(100% * 8 / 12);
-    }
-
-    .col-md-9 {
-        flex-basis: calc(100% * 9 / 12);
-    }
-
-    .col-md-10 {
-        flex-basis: calc(100% * 10 / 12);
-    }
-
-    .col-md-11 {
-        flex-basis: calc(100% * 11 / 12);
-    }
-
-    .col-md-12 {
-        flex-basis: calc(100% * 12 / 12);
-    }
-}
-
-@media (max-width: 767px) {
-    /* -几代表几份 */
-    .col-sm-1 {
-        flex-basis: calc(100% / 12);
-    }
-
-    .col-sm-2 {
-        flex-basis: calc(100% * 2 / 12);
-    }
-
-    .col-sm-3 {
-        flex-basis: calc(100% * 3 / 12);
-    }
-
-    .col-sm-4 {
-        flex-basis: calc(100% * 4 / 12);
-    }
-
-    .col-sm-5 {
-        flex-basis: calc(100% * 5 / 12);
-    }
-
-    .col-sm-6 {
-        flex-basis: calc(100% * 6 / 12);
-    }
-
-    .col-sm-7 {
-        flex-basis: calc(100% * 7 / 12);
-    }
-
-    .col-sm-8 {
-        flex-basis: calc(100% * 8 / 12);
-    }
-
-    .col-sm-9 {
-        flex-basis: calc(100% * 9 / 12);
-    }
-
-    .col-sm-10 {
-        flex-basis: calc(100% * 10 / 12);
-    }
-
-    .col-sm-11 {
-        flex-basis: calc(100% * 11 / 12);
-    }
-
-    .col-sm-12 {
-        flex-basis: calc(100% * 12 / 12);
-    }
-}
