html中引入js，实验

--- a/my_website/templates/web.html
+++ b/my_website/templates/web.html
@@ -11,41 +11,19 @@
     <title>Acwing-Web应用课</title>
 
     <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="/static/third_party/bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css">
-    <script src="/static/third_party/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
-
 </head>
 
 <body style="background: #2b2d30">
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-xs-12">
-            <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="电子邮箱"
-                       aria-describedby="emailHelp">
-            </div>
-        </div>
-        <div class="col-md-6 col-xs-12">
-            <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="密码">
-            </div>
-        </div>
-        <div class="col-xs-12">
-            <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Description</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                          placeholder="个人简介"></textarea>
-            </div>
-        </div>
-        <div class="col-md-6 col-xs-12">
-            <button type="button" class="btn btn-success">提交</button>
-        </div>
-        <div class="col-md-6 col-xs-12">
-            <button type="button" class="btn btn-secondary">取消</button>
-        </div>
-    </div>
-</div>
+    <br>
+    <textarea style="background-color: lightblue; width: 200px; height: 200px;" class="input" id="" cols="30" rows="10"></textarea>
+    <br>
+    <button>Run</button>
+    <br>
+    <pre style="background-color: lightblue; width: 200px; height: 200px;"></pre>
+    <script type="module">
+        import {main} from "../static/js";
+
+        main();
+    </script>
 </body>
 </html>
