--- a/my_website/static/css/style.css
+++ b/my_website/static/css/style.css
@@ -22,20 +22,29 @@
     flex-wrap: wrap;
 }
 
-.col {
-    display: flex;
-    /*flex-basis: calc(100% / 3);*/
-    height: 50px;
-    justify-content: center;
-
-    background-color: lightsalmon;
-    border: 1px solid gray;
-    box-sizing: border-box;
-    font-size: 30px;
+.btn-success {
+    margin: 12px 0 22px 0;
 }
 
- @media (max-width: 767px) {
-        .col-xs-12 button {
-            width: 100%;
-        }
+.center {
+    display: flex;
+    /*justify-content: center;*/
+    /*align-items: center;*/
+    height: 100%;
+}
+
+.title {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 0 0 14px 0;
+}
+
+.avg-speed {
+    font-size: 20px;
+}
+
+@media (max-width: 767px) {
+    .col-xs-12 button {
+        width: 100%;
     }
+}
